@@ -1,66 +1,0 @@
-// Copyright (c) Microsoft Corporation.
-// All rights reserved.
-//
-// This code is licensed under the MIT License.
-//
-// Permission is hereby granted, free of charge, to any person obtaining a copy
-// of this software and associated documentation files(the "Software"), to deal
-// in the Software without restriction, including without limitation the rights
-// to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
-// copies of the Software, and to permit persons to whom the Software is
-// furnished to do so, subject to the following conditions :
-//
-// The above copyright notice and this permission notice shall be included in
-// all copies or substantial portions of the Software.
-//
-// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-// THE SOFTWARE.
-package com.microsoft.identity.common.nativeauth.internal.commands
-
-import com.microsoft.identity.common.nativeauth.internal.controllers.NativeAuthMsalController
-import com.microsoft.identity.common.java.nativeauth.commands.parameters.AcquireTokenNoFixedScopesCommandParameters
-import com.microsoft.identity.common.java.logging.LogSession
-import com.microsoft.identity.common.java.logging.Logger
-import com.microsoft.identity.common.java.result.AcquireTokenResult
-
-/**
- * Retrieve tokens from the cache or the server without specifying a fixed set of scopes.
- * This command will use the access tokens from the cached AT to perform the refresh token flow, if
- * necessary.
- */
-class AcquireTokenNoFixedScopesCommand(
-    private val parameters: AcquireTokenNoFixedScopesCommandParameters,
-    private val controller: NativeAuthMsalController,
-    publicApiId: String
-) : BaseNativeAuthCommand<AcquireTokenResult>(
-    parameters,
-    controller,
-    publicApiId
-) {
-    companion object {
-        private val TAG = AcquireTokenNoFixedScopesCommand::class.java.simpleName
-    }
-
-    override fun execute(): AcquireTokenResult {
-        LogSession.logMethodCall(
-            tag = TAG,
-            correlationId = parameters.getCorrelationId(),
-            methodName = "${TAG}.execute"
-        )
-
-        val result = controller.acquireTokenSilent(
-            parameters
-        )
-
-        Logger.info(
-            TAG,
-            "Returning result: AcquireTokenResult()"
-        )
-        return result
-    }
-}
