@@ -22,8 +22,6 @@
 //  THE SOFTWARE.
 package com.microsoft.identity.common.nativeauth.internal.util;
 
-import com.microsoft.identity.common.java.commands.parameters.SilentTokenCommandParameters;
-import com.microsoft.identity.common.java.nativeauth.commands.parameters.AcquireTokenNoFixedScopesCommandParameters;
 import com.microsoft.identity.common.java.nativeauth.commands.parameters.SignInStartCommandParameters;
 import com.microsoft.identity.common.java.nativeauth.commands.parameters.SignInSubmitCodeCommandParameters;
 import com.microsoft.identity.common.java.nativeauth.commands.parameters.SignInSubmitPasswordCommandParameters;
@@ -141,41 +139,6 @@ public class CommandUtil {
                         .correlationId(correlationId)
                         .challengeType(parameters.getChallengeType())
                         .build();
-
-        return commandParameters;
-    }
-
-    /**
-     * Converts to [AcquireTokenNoFixedScopesCommandParameters] object to a new
-     * [SilentTokenCommandParameters] object.
-     * @param parameters input command parameter
-     * @param correlationId correlationId to be used in the request
-     * @return [SilentTokenCommandParameters] object
-     */
-    public static SilentTokenCommandParameters convertAcquireTokenNoFixedScopesCommandParameters(
-            AcquireTokenNoFixedScopesCommandParameters parameters,
-            String correlationId
-    ) {
-        final SilentTokenCommandParameters commandParameters = SilentTokenCommandParameters
-                .builder()
-                .platformComponents(parameters.getPlatformComponents())
-                .applicationName(parameters.getApplicationName())
-                .applicationVersion(parameters.getApplicationVersion())
-                .clientId(parameters.getClientId())
-                .isSharedDevice(parameters.isSharedDevice())
-                .oAuth2TokenCache(parameters.getOAuth2TokenCache())
-                .redirectUri(parameters.getRedirectUri())
-                .requiredBrokerProtocolVersion(parameters.getRequiredBrokerProtocolVersion())
-                .sdkType(SdkType.MSAL)
-                .sdkVersion(parameters.getSdkVersion())
-                .authority(parameters.authority)
-                .forceRefresh(parameters.isForceRefresh())
-                .account(parameters.getAccount())
-                .authenticationScheme(parameters.getAuthenticationScheme())
-                .powerOptCheckEnabled(parameters.isPowerOptCheckEnabled())
-                .correlationId(correlationId)
-                .correlationId(parameters.getCorrelationId())
-                .build();
 
         return commandParameters;
     }
