@@ -7,6 +7,7 @@ Version 17.4.0
 - [MINOR] Update flow to get token for labapi to not require automationrunnerapp (#2376)
 - [MINOR] Add field in BrokerInteractiveTokenCommandParameters for ATv2. (#2363)
 - [PATCH] Safe logging of Kotlin data classes through ILoggable interface (#2384)
+- [MINOR] Support for multiple access tokens for NativeAuth. (#2390)
 
 Version 17.3.0
 ---------
